--- a/ClientApp/src/app/shared/camas/camas.component.css
+++ b/ClientApp/src/app/shared/camas/camas.component.css
@@ -10,7 +10,23 @@
     box-shadow: 0 0 10px rgba(8, 8, 8, 0.1);
     margin-bottom: 20px;
   }
+  .form-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+  }
   
+  .form-container input, 
+.form-container select, 
+.form-container button {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+}
+.table-container table {
+  width: 100%;
+}
   .table {
     width: 100%;
     border-collapse: collapse;
@@ -98,6 +114,9 @@
 
   }
 
+  .form-container select {
+    height: 40px;
+  }
   select {
     width: 100px;
     height: 30px;
@@ -120,3 +139,47 @@
     align-items: center;
     justify-content: space-between;
   }
+/* Estilos para el modal */
+.modal {
+  display: flex;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  width: 300px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.mensaje-exito {
+  margin-top: 10px;
+  padding: 10px;
+  color: green;
+  background-color: #e0ffe0;
+  border: 1px solid green;
+  border-radius: 4px;
+}
