--- a/ClientApp/src/app/shared/roles/roles.component.html
+++ b/ClientApp/src/app/shared/roles/roles.component.html
@@ -52,8 +52,10 @@
         [(ngModel)]="rolParaActualizar.NombreRol"
         name="nombreRol"
       />
-      <button type="submit">Guardar</button>
-      <button type="button" (click)="descartarCambios()">Descartar</button>
+      <div class="botones">
+        <button type="submit">Guardar</button>
+        <button type="button" (click)="descartarCambios()">Descartar</button>
+      </div>
     </form>
   </div>
 
