--- a/ClientApp/src/app/administrativo/pages/buscar-paciente/buscar-paciente.component.html
+++ b/ClientApp/src/app/administrativo/pages/buscar-paciente/buscar-paciente.component.html
@@ -14,6 +14,17 @@
       />
     </div>
 
+    <div class="form-group">
+      <label for="search-ss">Número de Seguridad Social</label>
+      <input 
+        type="text" 
+        id="search-ss" 
+        [(ngModel)]="searchSS" 
+        name="searchSS" 
+        placeholder="Número de Seguridad Social" 
+      />
+    </div>
+
     <button type="submit" class="submit-btn">Buscar Paciente</button>
   </form>
 
