--- a/ClientApp/src/app/shared/usuarios/usuarios.component.html
+++ b/ClientApp/src/app/shared/usuarios/usuarios.component.html
@@ -1,5 +1,16 @@
 <div class="usuarios-section">
   <h2>Usuarios</h2>
+  <!-- Caja de búsqueda -->
+  <div class="search-container">
+    <label for="search">Buscar Usuario por Nombre:</label>
+    <input
+      type="text"
+      id="search"
+      placeholder="Escribe para buscar..."
+      [(ngModel)]="searchTerm"
+      (ngModelChange)="filtrarUsuarios()"
+    />
+  </div>
   <div class="table-container">
     <table class="table">
       <thead>
@@ -85,7 +96,12 @@
         [(ngModel)]="usuarioParaActualizar.IdRol"
         name="idRol"
       />
-      <button type="submit">Guardar</button>
+      <div class="botones">
+        <button type="submit">Guardar</button>
+        <button type="button" (click)="cancelarActualizarUsuario()">
+          Cancelar
+        </button>
+      </div>
     </form>
   </div>
 
@@ -116,15 +132,17 @@
         name="contrasenya"
         required
       />
-      <label for="idRol">ID Rol:</label>
-      <input
-        type="number"
-        id="idRol"
-        [(ngModel)]="nuevoUsuario.IdRol"
-        name="idRol"
-        required
-      />
-      <button type="submit">Agregar</button>
+      <label for="idRol">Rol:</label>
+      <select [(ngModel)]="nuevoUsuario.IdRol" name="idRol" required>
+        <option [value]="0" disabled>Selecciona un rol</option>
+        <option *ngFor="let rol of roles" [value]="rol.IdRol">
+          {{ rol.NombreRol }}
+        </option>
+      </select>
+      <div class="botones">
+        <button type="submit">Guardar</button>
+        <button type="button" (click)="cancelarNuevoUsuario()">Cancelar</button>
+      </div>
     </form>
   </div>
 </div>
