--- a/ClientApp/src/app/shared/pacientes/pacientes.component.css
+++ b/ClientApp/src/app/shared/pacientes/pacientes.component.css
@@ -36,28 +36,35 @@ input[type="text"] {
 }
 
 .table-container {
+  background-color: rgb(228, 224, 224);
+  padding: 20px;
+  margin: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(8, 8, 8, 0.1);
   margin-bottom: 20px;
 }
 
 .table {
   width: 100%;
   border-collapse: collapse;
+  border-radius: 5px;
 }
 
-.table th, .table td {
+.table, th,  td {
   padding: 12px;
-  border: 1px solid #ddd;
-  text-align: left;
+  border: 1px solid #ccc;
+
 }
 
 .table th {
-  background-color: #f4f4f4;
-  color: #333;
+  background-color: #0078d4;
+  color: white;
   cursor: pointer;
+  border-radius: 5px;
 }
 
 .table td {
-  background-color: #fff;
+  background-color: rgb(228, 224, 224);
 }
 
 .table tr:nth-child(even) {
