--- a/ClientApp/src/app/shared/pacientes/pacientes.component.css
+++ b/ClientApp/src/app/shared/pacientes/pacientes.component.css
@@ -50,10 +50,11 @@ input[type="text"] {
   border-radius: 5px;
 }
 
-.table, th,  td {
+.table,
+th,
+td {
   padding: 12px;
   border: 1px solid #ccc;
-
 }
 
 .table th {
@@ -61,6 +62,14 @@ input[type="text"] {
   color: white;
   cursor: pointer;
   border-radius: 5px;
+}
+
+td button {
+  margin-right: 5px;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
 }
 
 .table td {
@@ -217,10 +226,15 @@ button[type="submit"]:hover {
 }
 
 @keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
-section
-{display: flex;
-column-gap: 50px;
-justify-content: center;}
+section {
+  display: flex;
+  column-gap: 50px;
+  justify-content: center;
+}
