--- a/ClientApp/src/app/administrativo/pages/administrativo-dashboard/administrativo-dashboard.component.html
+++ b/ClientApp/src/app/administrativo/pages/administrativo-dashboard/administrativo-dashboard.component.html
@@ -4,6 +4,7 @@
       <li><a routerLink="administrativo-inicio" routerLinkActive="active" title="Página de inicio del administrativo">Inicio</a></li>
       <li><a routerLink="registrar-paciente" routerLinkActive="active" title="Registrar un nuevo paciente">Registrar Paciente</a></li>
       <li><a routerLink="buscar-paciente" routerLinkActive="active" title="Buscar un paciente registrado">Buscar Paciente</a></li>
+      <li><a routerLink="pacientes" routerLinkActive="active" title="Ver todos los pacientes">Ver Pacientes</a></li>
     </ul>
   </aside>
 
